# rules_spring

./: .bazelrc  .gitignore  BUILD  LICENSE.txt  MODULE.bazel  README.md  REPO.bazel  WORKSPACE  WORKSPACE.sample  external_deps.bzl  makerelease.sh  maven_install.json  repositories.bzl  spring_boot_starter_jetty_install.json
.aspect/bazelrc/: README.md  bazel6.bazelrc
.aspect/bazelrc/local/: bazel7.bazelrc
bazel-springboot-rule/: WORKSPACE.sample
bazel-springboot-rule/samples/: README.md
bazel-springboot-rule/tools/springboot/: BUILD  README.md  springboot.bzl  springboot_pkg.sh
examples/: README.md
examples/demoapp/: BUILD  README.md  application-dev.properties  application.properties  author.txt  custom_bazelrun_script.sh  custom_launcher_script.sh  demoapp_dupeclass_allowlist.txt  example_data.txt  generate-build-info.bzl  generate-build-info.sh  info.txt  remote_debug.sh
examples/demoapp/config/: application.properties
examples/demoapp/libs/lib1/: BUILD
examples/demoapp/libs/lib2/: BUILD
examples/demoapp/libs/lib3_neverlink/: BUILD  README.md
examples/demoapp/src/main/java/com/sample/: SampleAutoConfiguration.java  SampleMain.java
examples/demoapp/src/main/resources/: application.properties
examples/demoapp/src_root/main/java/com/sample/: SampleRootClass.java
examples/helloworld/: BUILD  README.md  custom_launcher_script.sh  migrated-pom.xml  remote_debug.sh
examples/helloworld/libs/lib1/: BUILD
examples/helloworld/libs/lib2/: BUILD
examples/helloworld/src/main/java/com/sample/: SampleAutoConfiguration.java  SampleMain.java  SampleRest.java
examples/helloworld/src/test/java/com/sample/: SampleRestFuncTest.java  SampleRestUnitTest.java
examples/helloworld/src/test/resources/: test.properties
examples/kotlin/: BUILD  README.md
examples/kotlinapp/: BUILD  README.md
examples/kotlinapp/src/main/java/com/samples/: SampleController.kt  SampleMain.kt  SampleUtil.java
examples/kotlinapp/src/main/resources/: application.properties
samples/: README.md
samples/helloworld/: BUILD  README.md  helloworld_classpath.idx  helloworld_dupeclass_allowlist.txt  migrated-pom.xml  remote_debug.sh
samples/helloworld/libs/lib1/: BUILD
samples/helloworld/libs/lib2/: BUILD
samples/helloworld/src/main/java/com/sample/: SampleMain.java  SampleRest.java
samples/helloworld/src/main/resources/: application.properties
springboot/: BUILD  README.md  addin_end.txt  attributes.md  bazelrun.md  bazelrun_stop_gen.sh  check_dupe_classes.py  cli.md  default_bazelrun_script.sh  default_launcher_script.sh  deps_filter_transitive.bzl  detect_javax_classes.py  javax.md  springboot.bzl  springboot_doc.md  springboot_pkg.py  springboot_pkg.sh  springbootjar.bzl  testing_springboot.md  unwanted_classes.md  write_bazelrun_env.sh  write_gitinfo_properties.sh  write_launcherenv.sh  write_manifest.sh
springboot/deps_filter_rules/: BUILD  README.md  dependencyset.bzl  dependencyset.md  deps_filter.bzl  deps_filter.md  deps_filter_disable_transitives.md
springboot/deps_filter_rules/tests/: README.md  external_dependencies_testing.md  internal_dependencies_testing.md
springboot/deps_filter_rules/tests/dependencyset/external_dependencies/compile_and_runtime/: BUILD  compile_and_runtime_test.bzl
springboot/deps_filter_rules/tests/dependencyset/internal_dependencies/compile_and_runtime_1/: BUILD  compile_and_runtime_test.bzl
springboot/deps_filter_rules/tests/dependencyset/internal_dependencies/compile_and_runtime_2/: BUILD  compile_and_runtime_test.bzl
springboot/deps_filter_rules/tests/dependencyset/internal_dependencies/compile_time_only/: BUILD  compile_time_only_test.bzl
springboot/deps_filter_rules/tests/dependencyset/internal_dependencies/runtime_only/: BUILD  runtime_only_test.bzl
springboot/deps_filter_rules/tests/depsfilter/external_dependencies/compile_and_runtime/: BUILD  compile_and_runtime_test.bzl
springboot/deps_filter_rules/tests/depsfilter/external_dependencies/compile_and_runtime_through_java_library/: BUILD  compile_and_runtime_test.bzl
springboot/deps_filter_rules/tests/depsfilter/internal_dependencies/compile_and_runtime_1/: BUILD  compile_and_runtime_test.bzl
springboot/deps_filter_rules/tests/depsfilter/internal_dependencies/compile_and_runtime_2/: BUILD  compile_and_runtime_test.bzl
springboot/deps_filter_rules/tests/depsfilter/internal_dependencies/compile_time_only/: BUILD  compile_time_only_test.bzl
springboot/deps_filter_rules/tests/depsfilter/internal_dependencies/runtime_only/: BUILD  runtime_only_test.bzl
springboot/deps_filter_rules/tests/external_deps/: unmanaged_deps_filter_install.json
springboot/deps_filter_rules/tests/test_utils/: BUILD  dependency_graph.txt  verification_utils.bzl
springboot/deps_filter_rules_legacy/: BUILD  README.md  deps_filter.md  deps_filter_disable_transitives.bzl  deps_filter_disable_transitives.md
springboot/import_bundles/: BUILD  README.md
tools/: get_github_stats_downloads.py
tools/buildstamp/: README.md  get_workspace_status
tools/codecoverage/: coverage-report.sh
tools/formatter/: README.md  format_bazel_files.sh
tools/jar_explode/: README.md  jar_explode.sh
tools/license/: BUILD
tools/python_interpreter/: BUILD  README.md  check_python_path.py
tools/springboot/: BUILD  README.md  allowlist.txt  check_dupe_classes.py  dupe_class_jar_allowlist.txt  run_tests.sh  springboot.bzl  springboot_pkg.sh  testing_springboot.md  unwanted_classes.md  verify_conflict.py  whitelist.txt  write_manifest.sh
tools/springboot/import_bundles/: BUILD  README.md
tools/springboot/src/test/resources/: MANIFEST.MF  git.properties
tools/springboot/tests/: check_dupe_classes_test.py  verify_conflict_test.py
(+142 files in other folders)
