module(
    name = "rules_spring",
    version = "2.4.1",
    compatibility_level = 1,
    repo_name = "rules_spring",
)

bazel_dep(name = "rules_python", version = "0.40.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    # This takes priority over captive python from //tools/python_interpreter unless extra toolchains are specified e.g.
    # bazel run --extra_toolchains //tools/python_interpreter:captive_python_toolchain <target>
    is_default = True,
    python_version = "3.11",
)

bazel_dep(name = "rules_license", version = "1.0.0")
# Thank you Chuck Grindel
# Bug fix for https://github.com/bazelbuild/rules_license/pull/161#issuecomment-2525346894
git_override(
    module_name = "rules_license",
    remote = "https://github.com/cgrindel/rules_license.git",
    commit="ed5bb2515c7e57ef48e361cc4977b54a25002d71",
)
