module(
    name = "rules_spring",
    version = "2.6.3",
    compatibility_level = 2,
    repo_name = "rules_spring",
)

# Python for dupe class checking support
bazel_dep(name = "rules_python", version = "0.40.0")

# For License support
bazel_dep(name = "rules_license", version = "1.0.0")

# For unittest toolchain
bazel_dep(name = "bazel_skylib", version = "1.1.1")

# DEV DEPENDENCIES

# Maven dependencies for the examples
bazel_dep(name = "rules_jvm_external", version = "6.6", dev_dependency = True)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven", dev_dependency = True)
maven.install(
    artifacts = [
        "org.slf4j:slf4j-api:2.0.17",
        "org.springframework.boot:spring-boot:3.4.4",
        "org.springframework.boot:spring-boot-actuator:3.4.4",
        "org.springframework.boot:spring-boot-actuator-autoconfigure:3.4.4",
        "org.springframework.boot:spring-boot-autoconfigure:3.4.4",
        "org.springframework.boot:spring-boot-configuration-processor:3.4.4",
        "org.springframework.boot:spring-boot-loader:3.4.4",
        "org.springframework.boot:spring-boot-loader-tools:3.4.4",
        "org.springframework.boot:spring-boot-jarmode-tools:3.4.4",
        "org.springframework.boot:spring-boot-starter:3.4.4",
        "org.springframework.boot:spring-boot-starter-actuator:3.4.4",
        "org.springframework.boot:spring-boot-starter-freemarker:3.4.4",
        "org.springframework.boot:spring-boot-starter-jdbc:3.4.4",
        "org.springframework.boot:spring-boot-starter-jetty:3.4.4",
        "org.springframework.boot:spring-boot-starter-logging:3.4.4",
        "org.springframework.boot:spring-boot-starter-security:3.4.4",
        "org.springframework.boot:spring-boot-starter-test:3.4.4",
        "org.springframework.boot:spring-boot-starter-web:3.4.4",
        "org.springframework.boot:spring-boot-test:3.4.4",
        "org.springframework.boot:spring-boot-test-autoconfigure:3.4.4",
        "org.springframework.boot:spring-boot-starter-thymeleaf:3.4.4",
        "org.springframework:spring-aop:6.2.5",
        "org.springframework:spring-aspects:6.2.5",
        "org.springframework:spring-beans:6.2.5",
        "org.springframework:spring-context:6.2.5",
        "org.springframework:spring-context-support:6.2.5",
        "org.springframework:spring-core:6.2.5",
        "org.springframework:spring-expression:6.2.5",
        "org.springframework:spring-jdbc:6.2.5",
        "org.springframework:spring-test:6.2.5",
        "org.springframework:spring-tx:6.2.5",
        "org.springframework:spring-web:6.2.5",
        "org.springframework:spring-webmvc:6.2.5",

        # intentionally ancient version annotation-api; in demoapp we use
        # a filter to exclude this dependency
        "javax.annotation:javax.annotation-api:1.3.2",


        # test deps
        "junit:junit:4.13.2",
        "org.hamcrest:hamcrest-core:2.2",
        "org.assertj:assertj-core:3.25.3",
    ],
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")

unmanaged_maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven", dev_dependency = True)
unmanaged_maven.install(
    name = "unmanaged_deps_filter",
    artifacts = [
        "org.springframework.boot:spring-boot-starter-data-jpa:3.3.11",
        "org.springframework.boot:spring-boot-starter-security:3.3.11",
        "com.fasterxml.jackson.core:jackson-databind:2.17.2",
        "org.hibernate.orm:hibernate-core:6.4.4.Final",
        "org.springframework.boot:spring-boot-starter-oauth2-client:3.3.11",
        "org.springframework.boot:spring-boot-starter-webflux:3.3.11",
        "org.springframework.boot:spring-boot-starter-actuator:3.3.11",
        "jakarta.servlet.jsp:jakarta.servlet.jsp-api:3.1.1",
        "junit:junit:4.13.2",
        "org.assertj:assertj-core:3.26.0",
        "io.micrometer:micrometer-commons:1.13.13",
        "org.slf4j:jul-to-slf4j:2.0.17",
    ],
    excluded_artifacts = [
        "org.slf4j:slf4j-api",
        "org.yaml:snakeyaml",
    ],
    lock_file = "//springboot/deps_filter_rules/tests/external_deps:unmanaged_deps_filter_install.json",
)
use_repo(unmanaged_maven, "unmanaged_deps_filter")

